更新高德地图的使用
接上了更改密码好新人手机号

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,8 @@
     <string name="preference_default_tts_pitch">50</string>
     <string name="intell_bd_title">智能播报</string>
 
+    <string name="search">搜索</string>
+
 
 
 
