--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,15 @@
     <string name="preference_key_tts_volume">tts_volume</string>
     <string name="preference_key_tts_pitch">tts_pitch</string>
 
+    <string name="csy_form_tip">目前仅支持小型汽车查询</string>
+    <string name="csy_btn_query">开始查询</string>
+    <string name="csy_cxdz_lab">查询地</string>
+    <string name="csy_cxdz_tip">请选择查询地</string>
+    <string name="csy_chepai_lab">车牌号</string>
+    <string name="csy_chepai_tip">请输入车牌号后6位</string>
+    <string name="csy_chejia_lab">车架号</string>
+    <string name="csy_engine_lab">发动机号</string>
+    <string name="csy_close">关闭</string>
+
 
 </resources>
